# claude-code-insights

./: .gitignore  README.md  cli.py  insights_sandbox.py  notebook.py  pipeline.py  pyproject.toml  report_template.py
insights/: __init__.py  cli.py  pipeline.py  prompts.py
prompts/: at_a_glance.md  facet_extraction.md  friction_analysis.md  fun_ending.md  interaction_style.md  on_the_horizon.md  project_areas.md  suggestions.md  summary.md  what_works.md
