[project]
name = "claude-code-insights"
version = "0.1.0"
description = "Analyze Claude Code session transcripts and generate insight reports"
requires-python = ">=3.11"
dependencies = [
    "weave",
    "openai",
    "typer",
    "rich",
]

[project.scripts]
insights = "insights.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["insights"]
