[project]
name = "claude-code-insights"
version = "0.1.0"
description = "Analyze Claude Code session transcripts and generate insight reports"
requires-python = ">=3.11"
dependencies = [
    "weave",
    "openai",
    "marimo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["pipeline.py", "report_template.py", "prompts"]
